 - pycect     : NCAR/PyCECT                 : 3.2.2

Bugs fixed:
 - 

Describe any changes made to scripts/build system:


Describe any substantial timing or memory changes:


Code merged by: Matvey Debolskiy

Code reviewed by: Steve Goldhaber, Tomas Torsvik, Alok Gupta
                  Mariana Vertenstein

Summary of pre-tag testing:
 - prealpha_noresm : 1 expected FAIL
     SMS_D_Ld1_P253.ne30pg3_tn05.N1850.betzy_intel.allactive-defaultio
 - aux_clm_noresm : 1 expected fail
     ERS.f09_f09_mtn14.I2000Clm60Bgc.betzy_intel.clm-lnd2rof_tracers
     Baseline diffs for tests with MOSART (tag updated)


Summarize any change to answers:
 - None

==============================================================

Tag name: noresm3_0_beta02
Date: 20-08-2025
One-line Summary: New default settings for noresm3_0_beta02 release

Details:
 - Update ccs_config to ccs_config_noresm0.0.51
 - Update BLOM to tag v1.11.4
   - Increase default vertical layers for hybrid coordinates from 56 to 72
   - Adaption of reference potential densities enabled by default
   - Improve CPPM transport method for tracers
   - Change default mixed layer stratification method to Bodner et al. (2023)
   - HAMOCC: Adjust N-cyle parameters and set new default parameters
 - Update CAM to tag noresm3_0_013_cam6_4_085
   - Introduce new history flags to contain all CAM output in NorESM3
 - Update CICE to tag noresm_cice6_6_0_20250522_v2
 - Update CMEPS to tag cmeps1.0.39_noresm_v6
   - Enable COARE algorithm by default for fully coupled NorESM compsets
 - Update MOSART to tag mosart1.1.12_noresm_v0
   - Updates NorESM to use ESCOMP mosart1.1.12
 - Update git-fleximod to v1.0.2

Component tags used in this tag:

 - parallelio : NCAR/ParallelIO             : pio2_6_2
 - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.51
 - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
 - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0